chore: adding more tests